--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://sebastian:64RXcDqVxczQoVWz@testcluster.rs7xl.mongodb.net/shoppingDB?retryWrites=true&w=majority
+      uri:
     datasource:
       url: api
